exports[`consistent-function-style > invalid(1): const parse = value => value; 1`] = `

Options:
- namedFunctions: 'declaration'

Code:
  1 | const parse = value => value;

`;

exports[`consistent-function-style > invalid(1): const parse = value => value; 2`] = `

Message:
> 1 | const parse = value => value;
    |               ^^^^^^^^^^^^^^ Expected a function declaration for this named function, but found an arrow function.

`;

exports[`consistent-function-style > invalid(10): items.map(function item(value) { return item(value); }); 1`] = `

Options:
- callbacks: 'arrow-function'

Code:
  1 | items.map(function item(value) { return item(value); });

`;

exports[`consistent-function-style > invalid(10): items.map(function item(value) { return item(value); }); 2`] = `

Message:
> 1 | items.map(function item(value) { return item(value); });
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this callback, but found a function expression.

`;

exports[`consistent-function-style > invalid(11): items.map(function (item) { return this.parse(item); }); 1`] = `

Options:
- callbacks: 'arrow-function'

Code:
  1 | items.map(function (item) { return this.parse(item); });

`;

exports[`consistent-function-style > invalid(11): items.map(function (item) { return this.parse(item); }); 2`] = `

Message:
> 1 | items.map(function (item) { return this.parse(item); });
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this callback, but found a function expression.

`;

exports[`consistent-function-style > invalid(12): items.map(function (item = this.defaultItem) { return item.id; }); 1`] = `

Options:
- callbacks: 'arrow-function'

Code:
  1 | items.map(function (item = this.defaultItem) { return item.id; });

`;

exports[`consistent-function-style > invalid(12): items.map(function (item = this.defaultItem) { return item.id; }); 2`] = `

Message:
> 1 | items.map(function (item = this.defaultItem) { return item.id; });
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this callback, but found a function expression.

`;

exports[`consistent-function-style > invalid(13): items.map(item => this.parse(item)); 1`] = `

Options:
- callbacks: 'function-expression'

Code:
  1 | items.map(item => this.parse(item));

`;

exports[`consistent-function-style > invalid(13): items.map(item => this.parse(item)); 2`] = `

Message:
> 1 | items.map(item => this.parse(item));
    |           ^^^^^^^^^^^^^^^^^^^^^^^^ Expected a function expression for this callback, but found an arrow function.

`;

exports[`consistent-function-style > invalid(14): items.map((item = arguments[0]) => item.id); 1`] = `

Options:
- callbacks: 'function-expression'

Code:
  1 | items.map((item = arguments[0]) => item.id);

`;

exports[`consistent-function-style > invalid(14): items.map((item = arguments[0]) => item.id); 2`] = `

Message:
> 1 | items.map((item = arguments[0]) => item.id);
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a function expression for this callback, but found an arrow function.

`;

exports[`consistent-function-style > invalid(15): items.map(function (item) { /* comment */ return item.id; }); 1`] = `

Options:
- callbacks: 'arrow-function'

Code:
  1 | items.map(function (item) { /* comment */ return item.id; });

`;

exports[`consistent-function-style > invalid(15): items.map(function (item) { /* comment */ return item.id; }); 2`] = `

Message:
> 1 | items.map(function (item) { /* comment */ return item.id; });
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this callback, but found a function expression.

`;

exports[`consistent-function-style > invalid(16): condition ? function () {} : undefined; 1`] = `

Options:
- default: 'arrow-function'

Code:
  1 | condition ? function () {} : undefined;

`;

exports[`consistent-function-style > invalid(16): condition ? function () {} : undefined; 2`] = `

Message:
> 1 | condition ? function () {} : undefined;
    |             ^^^^^^^^^^^^^^ Expected an arrow function for this function, but found a function expression.

`;

exports[`consistent-function-style > invalid(17): const object = {parse(value) { return value; }}; 1`] = `

Options:
- objectProperties: 'arrow-function'

Code:
  1 | const object = {parse(value) { return value; }};

`;

exports[`consistent-function-style > invalid(17): const object = {parse(value) { return value; }}; 2`] = `

Message:
> 1 | const object = {parse(value) { return value; }};
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this object property, but found a method.

`;

exports[`consistent-function-style > invalid(18): const object = {parse: function (value) { return value; }}; 1`] = `

Options:
- objectProperties: 'method'

Code:
  1 | const object = {parse: function (value) { return value; }};

`;

exports[`consistent-function-style > invalid(18): const object = {parse: function (value) { return value; }}; 2`] = `

Message:
> 1 | const object = {parse: function (value) { return value; }};
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a method for this object property, but found a function expression.

`;

exports[`consistent-function-style > invalid(19): const object = {parse: value => value}; 1`] = `

Options:
- objectProperties: 'method'

Code:
  1 | const object = {parse: value => value};

`;

exports[`consistent-function-style > invalid(19): const object = {parse: value => value}; 2`] = `

Message:
> 1 | const object = {parse: value => value};
    |                        ^^^^^^^^^^^^^^ Expected a method for this object property, but found an arrow function.

`;

exports[`consistent-function-style > invalid(2): const parse = function (value) { return value; }; 1`] = `

Options:
- namedFunctions: 'declaration'

Code:
  1 | const parse = function (value) { return value; };

`;

exports[`consistent-function-style > invalid(2): const parse = function (value) { return value; }; 2`] = `

Message:
> 1 | const parse = function (value) { return value; };
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a function declaration for this named function, but found a function expression.

`;

exports[`consistent-function-style > invalid(20): let transform = value => value; transform = wrap(transform); 1`] = `

Options:
- reassignedVariables: 'function-expression'

Code:
  1 | let transform = value => value; transform = wrap(transform);

`;

exports[`consistent-function-style > invalid(20): let transform = value => value; transform = wrap(transform); 2`] = `

Message:
> 1 | let transform = value => value; transform = wrap(transform);
    |                 ^^^^^^^^^^^^^^ Expected a function expression for this reassigned variable, but found an arrow function.

`;

exports[`consistent-function-style > invalid(21): let transform = function (value) { return value; }; transform = wrap(transform); 1`] = `

Options:
- reassignedVariables: 'arrow-function'

Code:
  1 | let transform = function (value) { return value; }; transform = wrap(transform);

`;

exports[`consistent-function-style > invalid(21): let transform = function (value) { return value; }; transform = wrap(transform); 2`] = `

Message:
> 1 | let transform = function (value) { return value; }; transform = wrap(transform);
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this reassigned variable, but found a function expression.

`;

exports[`consistent-function-style > invalid(22): function parse(value) { return value; } 1`] = `

Options:
- namedFunctions: 'arrow-function'

Code:
  1 | function parse(value) { return value; }

`;

exports[`consistent-function-style > invalid(22): function parse(value) { return value; } 2`] = `

Message:
> 1 | function parse(value) { return value; }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this named function, but found a function declaration.

`;

exports[`consistent-function-style > invalid(23): function parseDefault(value) { return value; } 1`] = `

Options:
- namedFunctions: 'arrow-function'
  defaultExport: 'declaration'

Code:
  1 | function parseDefault(value) { return value; }

`;

exports[`consistent-function-style > invalid(23): function parseDefault(value) { return value; } 2`] = `

Message:
> 1 | function parseDefault(value) { return value; }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this named function, but found a function declaration.

`;

exports[`consistent-function-style > invalid(24): const parse = value => value; 1`] = `

Options:
- namedFunctions: 'function-expression'

Code:
  1 | const parse = value => value;

`;

exports[`consistent-function-style > invalid(24): const parse = value => value; 2`] = `

Message:
> 1 | const parse = value => value;
    |               ^^^^^^^^^^^^^^ Expected a function expression for this named function, but found an arrow function.

`;

exports[`consistent-function-style > invalid(25): const parse = function (value) { return value; }; 1`] = `

Options:
- namedFunctions: 'arrow-function'

Code:
  1 | const parse = function (value) { return value; };

`;

exports[`consistent-function-style > invalid(25): const parse = function (value) { return value; }; 2`] = `

Message:
> 1 | const parse = function (value) { return value; };
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this named function, but found a function expression.

`;

exports[`consistent-function-style > invalid(26): export function parse(value) { return value; } 1`] = `

Options:
- namedExports: 'arrow-function'

Code:
  1 | export function parse(value) { return value; }

`;

exports[`consistent-function-style > invalid(26): export function parse(value) { return value; } 2`] = `

Message:
> 1 | export function parse(value) { return value; }
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this named export, but found a function declaration.

`;

exports[`consistent-function-style > invalid(27): export default function parse(value) { return value; } 1`] = `

Options:
- namedFunctions: 'arrow-function'

Code:
  1 | export default function parse(value) { return value; }

`;

exports[`consistent-function-style > invalid(27): export default function parse(value) { return value; } 2`] = `

Message:
> 1 | export default function parse(value) { return value; }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this named function, but found a function declaration.

`;

exports[`consistent-function-style > invalid(28): export default (function parse() {}); 1`] = `

Options:
- default: 'arrow-function'

Code:
  1 | export default (function parse() {});

`;

exports[`consistent-function-style > invalid(28): export default (function parse() {}); 2`] = `

Message:
> 1 | export default (function parse() {});
    |                 ^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this function, but found a function expression.

`;

exports[`consistent-function-style > invalid(29): export default function parse(value) { return value; } 1`] = `

Options:
- namedFunctions: 'arrow-function'
  defaultExport: 'arrow-function'

Code:
  1 | export default function parse(value) { return value; }

`;

exports[`consistent-function-style > invalid(29): export default function parse(value) { return value; } 2`] = `

Message:
> 1 | export default function parse(value) { return value; }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this default export, but found a function declaration.

`;

exports[`consistent-function-style > invalid(3): export const parse = value => value; 1`] = `

Options:
- namedExports: 'declaration'

Code:
  1 | export const parse = value => value;

`;

exports[`consistent-function-style > invalid(3): export const parse = value => value; 2`] = `

Message:
> 1 | export const parse = value => value;
    |                      ^^^^^^^^^^^^^^ Expected a function declaration for this named export, but found an arrow function.

`;

exports[`consistent-function-style > invalid(30): export default (function parse() {}); 1`] = `

Options:
- namedFunctions: 'arrow-function'
  defaultExport: 'declaration'

Code:
  1 | export default (function parse() {});

`;

exports[`consistent-function-style > invalid(30): export default (function parse() {}); 2`] = `

Message:
> 1 | export default (function parse() {});
    |                 ^^^^^^^^^^^^^^^^^^^ Expected a function declaration for this default export, but found a function expression.

`;

exports[`consistent-function-style > invalid(31): export default () => {}; 1`] = `

Options:
- namedFunctions: 'arrow-function'
  defaultExport: 'declaration'

Code:
  1 | export default () => {};

`;

exports[`consistent-function-style > invalid(31): export default () => {}; 2`] = `

Message:
> 1 | export default () => {};
    |                ^^^^^^^^ Expected a function declaration for this default export, but found an arrow function.

`;

exports[`consistent-function-style > invalid(32): export default function () {} 1`] = `

Options:
- defaultExport: 'arrow-function'

Code:
  1 | export default function () {}

`;

exports[`consistent-function-style > invalid(32): export default function () {} 2`] = `

Message:
> 1 | export default function () {}
    |                ^^^^^^^^^^^^^^ Expected an arrow function for this default export, but found a function declaration.

`;

exports[`consistent-function-style > invalid(33): const parse: Parser = function (value) { return value; }; 1`] = `

Options:
- typedVariables: 'arrow-function'

Code:
  1 | const parse: Parser = function (value) { return value; };

`;

exports[`consistent-function-style > invalid(33): const parse: Parser = function (value) { return value; }; 2`] = `

Message:
> 1 | const parse: Parser = function (value) { return value; };
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this typed variable, but found a function expression.

`;

exports[`consistent-function-style > invalid(34): const parse: Parser = value => value; 1`] = `

Options:
- typedVariables: 'function-expression'

Code:
  1 | const parse: Parser = value => value;

`;

exports[`consistent-function-style > invalid(34): const parse: Parser = value => value; 2`] = `

Message:
> 1 | const parse: Parser = value => value;
    |                       ^^^^^^^^^^^^^^ Expected a function expression for this typed variable, but found an arrow function.

`;

exports[`consistent-function-style > invalid(35): export const parse: Parser = value => value; 1`] = `

Options:
- typedVariables: 'function-expression'
  namedExports: 'declaration'

Code:
  1 | export const parse: Parser = value => value;

`;

exports[`consistent-function-style > invalid(35): export const parse: Parser = value => value; 2`] = `

Message:
> 1 | export const parse: Parser = value => value;
    |                              ^^^^^^^^^^^^^^ Expected a function expression for this typed variable, but found an arrow function.

`;

exports[`consistent-function-style > invalid(36): items.map(async function (item) { return item; }); 1`] = `

Options:
- callbacks: 'arrow-function'

Code:
  1 | items.map(async function (item) { return item; });

`;

exports[`consistent-function-style > invalid(36): items.map(async function (item) { return item; }); 2`] = `

Message:
> 1 | items.map(async function (item) { return item; });
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this callback, but found a function expression.

Suggestion 1/1: Replace with an arrow function.:
  1 | items.map(async (item) => { return item; });

`;

exports[`consistent-function-style > invalid(37): items.map(item => { return item; }); 1`] = `

Options:
- callbacks: 'function-expression'

Code:
  1 | items.map(item => { return item; });

`;

exports[`consistent-function-style > invalid(37): items.map(item => { return item; }); 2`] = `

Message:
> 1 | items.map(item => { return item; });
    |           ^^^^^^^^^^^^^^^^^^^^^^^^ Expected a function expression for this callback, but found an arrow function.

Suggestion 1/1: Replace with a function expression.:
  1 | items.map(function (item) { return item; });

`;

exports[`consistent-function-style > invalid(38): items.map(function (item): number { return item; }); 1`] = `

Options:
- callbacks: 'arrow-function'

Code:
  1 | items.map(function (item): number { return item; });

`;

exports[`consistent-function-style > invalid(38): items.map(function (item): number { return item; }); 2`] = `

Message:
> 1 | items.map(function (item): number { return item; });
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this callback, but found a function expression.

Suggestion 1/1: Replace with an arrow function.:
  1 | items.map((item): number => { return item; });

`;

exports[`consistent-function-style > invalid(4): export const parse = function (value) { return value; }; 1`] = `

Options:
- namedExports: 'declaration'

Code:
  1 | export const parse = function (value) { return value; };

`;

exports[`consistent-function-style > invalid(4): export const parse = function (value) { return value; }; 2`] = `

Message:
> 1 | export const parse = function (value) { return value; };
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a function declaration for this named export, but found a function expression.

`;

exports[`consistent-function-style > invalid(5): items.map(function (item) { return item.id; }); 1`] = `

Options:
- callbacks: 'arrow-function'

Code:
  1 | items.map(function (item) { return item.id; });

`;

exports[`consistent-function-style > invalid(5): items.map(function (item) { return item.id; }); 2`] = `

Message:
> 1 | items.map(function (item) { return item.id; });
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected an arrow function for this callback, but found a function expression.

Suggestion 1/1: Replace with an arrow function.:
  1 | items.map((item) => { return item.id; });

`;

exports[`consistent-function-style > invalid(6): new Map(function () {}); 1`] = `

Options:
- callbacks: 'arrow-function'

Code:
  1 | new Map(function () {});

`;

exports[`consistent-function-style > invalid(6): new Map(function () {}); 2`] = `

Message:
> 1 | new Map(function () {});
    |         ^^^^^^^^^^^^^^ Expected an arrow function for this callback, but found a function expression.

`;

exports[`consistent-function-style > invalid(7): items.map(item => item.id); 1`] = `

Options:
- callbacks: 'function-expression'

Code:
  1 | items.map(item => item.id);

`;

exports[`consistent-function-style > invalid(7): items.map(item => item.id); 2`] = `

Message:
> 1 | items.map(item => item.id);
    |           ^^^^^^^^^^^^^^^ Expected a function expression for this callback, but found an arrow function.

Suggestion 1/1: Replace with a function expression.:
  1 | items.map(function (item) { return item.id; });

`;

exports[`consistent-function-style > invalid(8): items.map(async item => item.id); 1`] = `

Options:
- callbacks: 'function-expression'

Code:
  1 | items.map(async item => item.id);

`;

exports[`consistent-function-style > invalid(8): items.map(async item => item.id); 2`] = `

Message:
> 1 | items.map(async item => item.id);
    |           ^^^^^^^^^^^^^^^^^^^^^ Expected a function expression for this callback, but found an arrow function.

Suggestion 1/1: Replace with a function expression.:
  1 | items.map(async function (item) { return item.id; });

`;

exports[`consistent-function-style > invalid(9): items.map(item => ({id: item.id})); 1`] = `

Options:
- callbacks: 'function-expression'

Code:
  1 | items.map(item => ({id: item.id}));

`;

exports[`consistent-function-style > invalid(9): items.map(item => ({id: item.id})); 2`] = `

Message:
> 1 | items.map(item => ({id: item.id}));
    |           ^^^^^^^^^^^^^^^^^^^^^^^ Expected a function expression for this callback, but found an arrow function.

Suggestion 1/1: Replace with a function expression.:
  1 | items.map(function (item) { return ({id: item.id}); });

`;
